<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WiFast</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="menus_button_string">Menu</string>
    <string name="orders_button_string">Orders</string>
    <string name="profile_button_string">Profile</string>
    <string name="cart_button_string">Cart</string>
    <string name="finish_order_button_string">Pay</string>
    <string name="title_enable_settings_dialog">Enable localization/connection</string>
    <string name="location_disabled">Location is not enabled.\nPlease enable location and try again.</string>
    <string name="network_disabled">Network is not enabled.\nPlease enable network and try again.</string>
    <string name="exit_app">Exit app</string>
    <string name="settings">Settings</string>
    <string name="done">Done</string>
    <string name="wifast">WiFast</string>
    <string name="initial_price">0,00 €</string>
    <string name="quantity">Qt: 0</string>
    <string name="points">Points: 0</string>
    <string name="prod_name">Name of the product</string>
    <string name="description">Long description of the product</string>
    <string name="calories">Calories (kcal)</string>
    <string name="cal_val"> 2000 </string>
    <string name="carb">Carb (g)</string>
    <string name="carb_val">20</string>
    <string name="proteins">Proteins (g)</string>
    <string name="fat">Fat (g)</string>
    <string name="desc_price">Price: 0.00 €</string>
    <string name="expected_time">Average waiting time:</string>
    <string name="expected_time_val">02:00</string>

    <string name="menu_activity_title">Products:</string>
    <string name="cart_activity_title">Your purchases:</string>
    <string name="pay_activity_title">Payment method:</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_shop_list">Select your Shop:</string>
    <string name="title_activity_cash_register">CashRegister</string>
    <string name="title_activity_description">DescriptionActivity</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activity_shop_detail">Shop Details</string>
    <string name="title_activity_promotion">Promotions</string>
    <string name="title_activity_payment">Choose Payment Type</string>

</resources>
