<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EnableSettingsDialog" >

    <TextView
        android:id="@+id/enable_setting_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_disabled" />

    <LinearLayout
        android:layout_width="fill_parent"
	    android:layout_height="28dp"
	    android:layout_marginTop="20dp"
        style="?android:attr/buttonBarStyle"
	    android:weightSum="3" >

        <Button
            android:id="@+id/button1"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:onClick="exitAppButton"
            android:layout_weight="1"
	        style="?android:attr/buttonBarButtonStyle"
            android:text="@string/exit_app" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:onClick="showSettings"
            android:layout_weight="1"
	        style="?android:attr/buttonBarButtonStyle"
            android:text="@string/settings" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:onClick="doneButton"
            android:layout_weight="1"
	        style="?android:attr/buttonBarButtonStyle"
            android:text="@string/done" />
    </LinearLayout>

</LinearLayout>