<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DescriptionActivity" >

    <TextView 
        android:id="@+id/prod_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/prod_name"
        android:layout_centerHorizontal="true"/>
    
    <TextView
        android:id="@+id/long_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="164dp"
        android:text="@string/description" />

    <ImageView
        android:id="@+id/big_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:scaleType="fitXY"
        android:src="@drawable/hamburger_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/long_desc"
        android:paddingTop="10dp"
        android:orientation="vertical" >
        
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:orientation="horizontal" >
	        <TextView
		        android:id="@+id/calories"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:text="@string/calories" />

	        <TextView
	            android:id="@+id/cal_val"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_alignBaseline="@+id/calories"
	            android:layout_alignBottom="@+id/calories"
	            android:layout_alignParentRight="true"
	            android:text="@string/cal_val" />

        </RelativeLayout>
            
		<RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:orientation="horizontal" >

		    <TextView
		        android:id="@+id/carb"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:text="@string/carb" />

		    <fr.eurecom.wifast.library.TextProgressBar
		        android:id="@+id/carb_progr"
		        style="?android:attr/progressBarStyleHorizontal"
		        android:layout_width="100dp"
		        android:layout_height="match_parent"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:progressDrawable="@drawable/progr_bar" />

        </RelativeLayout>
        
		<RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:orientation="horizontal" >
		    <TextView
		        android:id="@+id/proteins"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:text="@string/proteins" />
		
		    <fr.eurecom.wifast.library.TextProgressBar
		        android:id="@+id/prot_progr"
		        style="?android:attr/progressBarStyleHorizontal"
		        android:layout_width="100dp"
		        android:layout_height="match_parent"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:progressDrawable="@drawable/progr_bar" />

        </RelativeLayout>
	
	    <RelativeLayout
	        android:id="@+id/linearLayout1"
	        android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
	        android:orientation="horizontal" >
		    <TextView
		        android:id="@+id/fat"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:text="@string/fat" />
	
	        <fr.eurecom.wifast.library.TextProgressBar
	            android:id="@+id/fat_progr"
	            style="?android:attr/progressBarStyleHorizontal"
	            android:layout_width="100dp"
	            android:layout_height="match_parent"
	            android:layout_alignParentRight="true"
	            android:layout_centerVertical="true"
	            android:progressDrawable="@drawable/progr_bar" />
	    </RelativeLayout>
	    
    </LinearLayout>
</RelativeLayout>